# stem-practice-studio

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  get_logs.py
Disain/: screen_08_warmup_hub.html  screen_09_warmup_active_siren.html  screen_10_onboarding_range_test.html  screen_11_warmup_completion.html
backend/: .env.example  Dockerfile  app.py  auth.py  docker-compose.tg.yml  docker-compose.yml  feedback.py  invites.py  pyproject.toml
backend/app/: config.py  db.py  jobs.py  main.py  models.py  progress.py  schemas.py  security.py  storage.py
backend/app/api/: auth.py  events.py  profile.py  tracks.py  warmup.py
backend/scripts/: bootstrap_index.py
backend_clean/: __init__.py  app.py
bench/: Dockerfile  README.md  models.txt  results.md  run_bench.sh  tracks.txt
bench/asr/: Dockerfile  run_ab.sh  run_asr.sh  run_sep_speed.sh  score_wer.py  server.py  transcribe.py  transcribe_gigaam.py
bench/banquet/: Dockerfile  run_banquet.sh  wrap_train.py
bench/pitch/: Dockerfile  README.md  run.py  (+1 more)
docs/: backend-flow-tz.md  telegram-experiment.md
pipeline/: __init__.py  align.py  asr.py  genius.py  identify.py  identify_llm.py  identify_search.py  lrc.py  lyrics.py  process.py  realign.py  runtime_cache.py  separate.py  yt.py
pipeline_clean/: __init__.py  clients.py  identify.py  lyrics.py  process.py  state.py
tools/: bootstrap_admin.py  diagnose_asr.py  diagnose_identify.py  invite_codes.py
web/: Dockerfile  README.md  capacitor.config.ts  next.config.ts  package-lock.json  package.json
web-mobile/: next.config.ts  package-lock.json
(+185 files in other folders)
