[project]
name = "stem-practice-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "arq>=0.26",
    "redis>=5.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "python-slugify>=8.0",
    "nanoid>=2.0",
]

[tool.uv]
package = false
